force-app/main/default/objects/RFQ__c/RFQ__c.object-meta.xml
<CustomObject>
    <label>購買見積依頼</label>
    <nameField>
        <displayFormat>RFQ-{0000}</displayFormat>
        <label>購買見積依頼番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>購買見積依頼</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>