force-app/main/default/objects/RFQ__c/fields/BOM_Part__c.field-meta.xml
<CustomField>
    <fullName>BOM_Part__c</fullName>
    <label>BOM部品</label>
    <type>Lookup</type>
    <referenceTo>BOM_Part__c</referenceTo>
    <relationshipLabel>見積依頼</relationshipLabel>
    <relationshipName>RFQs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>