force-app/main/default/objects/RFQ__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>新規部品</fullName><default>false</default><label>新規部品</label></value>
            <value><fullName>コスト見直し</fullName><default>false</default><label>コスト見直し</label></value>
            <value><fullName>代替調達</fullName><default>false</default><label>代替調達</label></value>
            <value><fullName>緊急調達</fullName><default>false</default><label>緊急調達</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>