force-app/main/default/objects/RFQ__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>回答期限</label>
    <type>Date</type>
</CustomField>