force-app/main/default/objects/RFQ__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>対象部品番号</label>
    <type>Text</type>
    <length>80</length>
</CustomField>