force-app/main/default/objects/RFQ__c/fields/Part_Spec__c.field-meta.xml
<CustomField>
    <fullName>Part_Spec__c</fullName>
    <label>仕様・要件</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>