force-app/main/default/objects/RFQ__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <label>必要数量</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>