force-app/main/default/objects/RFQ__c/fields/Selected_Quote__c.field-meta.xml
<CustomField>
    <fullName>Selected_Quote__c</fullName>
    <label>採用見積</label>
    <type>Lookup</type>
    <referenceTo>RFQ_Quote__c</referenceTo>
    <relationshipLabel>採用された見積依頼</relationshipLabel>
    <relationshipName>SelectedRFQs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>