force-app/main/default/objects/RFQ__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>下書き</fullName><default>true</default><label>下書き</label></value>
            <value><fullName>発行済</fullName><default>false</default><label>発行済</label></value>
            <value><fullName>評価中</fullName><default>false</default><label>評価中</label></value>
            <value><fullName>決定済</fullName><default>false</default><label>決定済</label></value>
            <value><fullName>キャンセル</fullName><default>false</default><label>キャンセル</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>