force-app/main/default/objects/RFQ__c/fields/Target_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_Price__c</fullName>
    <label>目標単価</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>