force-app/main/default/objects/RFQ__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>件名</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>